Alerts in mantenimiento ul>li

--- a/web/views/profile/account.html
+++ b/web/views/profile/account.html
@@ -53,7 +53,7 @@
                     <!-- END PERSONAL INFO TAB -->
                     <!-- CHANGE PASSWORD TAB -->
                     <div class="tab-pane" id="tab_1_3">
-                        <form action="#">
+                        <form>
                             <div class="form-group">
                                 <label class="control-label">Contraseña Anterior</label>
                                 <input type="password" class="form-control" ng-model="password.old"/> </div>
