--- a/web/views/mantenimientos/realizar.html
+++ b/web/views/mantenimientos/realizar.html
@@ -1,30 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-    </head>
-    <body>
-        <div class="panel panel-default">
-            <div class="panel-heading">Mantenimiento</div>
-            <div class="panel-body" ng-if="mantenimientos">
-
-                <div class="center" >
-                    <ul ng-model="alertList">
-                        <li ng-repeat="alert in alerts">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    {{alert.montacargas}}
-                                </div>
-                                <div class="panel-body">
-                                    
-                                </div>
-                                
-                            </div>                            
-                        </li>
-                    </ul>
+<body>
+    <div class="row">
+        <div class="col-md-12">
+            <!-- BEGIN EXAMPLE TABLE PORTLET-->
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption font-dark">
+                        <i class="icon-settings font-green"></i>
+                        <span class="caption-subject font-green bold uppercase">Enviar a Mantenimiento</span>
+                    </div>
+                    <div class="tools"> </div>
                 </div>
-
+                <div class="portlet-body">
+                    <table class="table table-striped table-bordered table-hover" id="sample_1">
+                        <thead>
+                            <tr>
+                                <th>Montacargas</th>
+                                <th>Enviar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="alert in alerts">
+                                <td>{{alert.montacargas}} </td>
+                                <td><input type="checkbox" class="icheck" data-checkbox="icheckbox_minimal-grey"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <div class="form-actions">
                     <div class="row">
                         <div class="col-md-offset-3 col-md-9">
@@ -46,13 +47,21 @@
 
                     </div>
                 </div>
-            </div>
-            <div class="panel-body" ng-if="!mantenimientos">
-                <div class="center" >
-                    <h1>No hay mantenimientos por realizar</h1>
+
+
+                <div class="panel-body" ng-if="!alerts">
+                    <div class="center" >
+                        <h1>No hay mantenimientos por realizar</h1>
+                    </div>
                 </div>
             </div>
-            <br>
+
+
         </div>
-    </body>
-</html>
+
+    </div>
+    <script src="assets/global/scripts/datatable.js" type="text/javascript"></script>
+    <script src="assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
+    <script src="assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
+    <script src="assets/pages/scripts/table-datatables-buttons.js" type="text/javascript"></script>
+</body>
