--- a/web/views/mantenimientos/realizar.html
+++ b/web/views/mantenimientos/realizar.html
@@ -21,7 +21,14 @@
                         <tbody>
                             <tr ng-repeat="alert in alerts">
                                 <td>{{alert.montacargas}} </td>
-                                <td><input type="checkbox" class="icheck" data-checkbox="icheckbox_minimal-grey"></td>
+                                <td>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">HTML Text</label>
+                                        <div class="col-md-9">
+                                            <input type="checkbox" class="make-switch" checked data-on-text="<i class='fa fa-check'></i>" data-off-text="<i class='fa fa-times'></i>">
+                                            <input type="checkbox" class="make-switch" checked data-on-text="<i class='fa fa-user'></i>" data-off-text="<i class='fa fa-trash-o'></i>"> </div>
+                                    </div>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
