--- a/web/views/mantenimientos/aprobar.html
+++ b/web/views/mantenimientos/aprobar.html
@@ -1,16 +1,47 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<div class="row">
+    <div class="col-md-12">
+        <!-- BEGIN EXAMPLE TABLE PORTLET-->
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-dark">
+                    <i class="icon-settings font-green"></i>
+                    <span class="caption-subject font-green bold uppercase">Aprobar Mantenimientos</span>
+                </div>
+                <div class="tools"> </div>
+            </div>
+            <div class="portlet-body" ng-if="!listaMant">
+                <div class="center" >
+                    <h1>No hay mantenimientos por aprobar</h1>
+                </div>
+            </div>
+            <div class="portlet-body"  ng-if="listaMant">
+                <table class="table table-striped table-bordered table-hover" id="sample_1">
+                    <thead>
+                        <tr>
+                            <th>Montacargas</th>
+                            <th>Marca</th>
+                            <th>Modelo</th>
+                            <th>Horimetro</th>
+                            <th>Mantenimiento Actual</th>
+                            <th>Aprobar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="list in listaMant">
+                            <td> {{list.numero_serie}} </td>
+                            <td> {{list.marca}} </td>
+                            <td> {{list.modelo}} </td>
+                            <td> {{list.horimetro}} </td>
+                            <td> {{list.man_Actual}} </td>
+                            <td>
+                                <button class="btn green" ng-click="actEstado(list)">Enviar</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+</div>
+<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="5000" close="closeAlert($index)">{{alert.msg}}</uib-alert>
