--- a/web/views/mantenimientos/realizar.html
+++ b/web/views/mantenimientos/realizar.html
@@ -1,72 +1,43 @@
-<body>
-    <div class="row">
-        <div class="col-md-12">
-            <!-- BEGIN EXAMPLE TABLE PORTLET-->
-            <div class="portlet light bordered">
-                <div class="portlet-title">
-                    <div class="caption font-dark">
-                        <i class="icon-settings font-green"></i>
-                        <span class="caption-subject font-green bold uppercase">Enviar a Mantenimiento</span>
-                    </div>
-                    <div class="tools"> </div>
+<div class="row">
+    <div class="col-md-12">
+        <!-- BEGIN EXAMPLE TABLE PORTLET-->
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-dark">
+                    <i class="icon-settings font-green"></i>
+                    <span class="caption-subject font-green bold uppercase">Enviar a Mantenimiento</span>
                 </div>
-                <div class="portlet-body">
-                    <table class="table table-striped table-bordered table-hover" id="sample_1">
-                        <thead>
-                            <tr>
-                                <th>Montacargas</th>
-                                <th>Enviar</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="alert in alerts">
-                                <td>{{alert.montacargas}} </td>
-                                <td>
-                                    <input type="checkbox" class="make-switch" checked data-on-text="<i class='fa fa-check'></i>" data-off-text="<i class='fa fa-times'></i>">
-                                    <input type="checkbox" class="make-switch" checked data-on-text="<i class='fa fa-user'></i>" data-off-text="<i class='fa fa-trash-o'></i>">
-                                    <input type="checkbox" name="my-checkbox" checked>
-                                    <input id="switch-state" type="checkbox" checked>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="form-actions">
-                    <div class="row">
-                        <div class="col-md-offset-3 col-md-9">
-                            <button
-                                class="btn green"
-                                mwl-confirm
-                                title="{{confirmationSettings.title}}"
-                                message="{{ confirmationSettings.message}}"
-                                confirm-text="{{ confirmationSettings.confirmText}}"
-                                cancel-text="{{ confirmationSettings.cancelText}}"
-                                placement="{{ confirmationSettings.placement}}"
-                                on-confirm="confirmClicked = true"
-                                on-cancel="cancelClicked = true"
-                                confirm-button-type="success"
-                                cancel-button-type="default">
-                                Enviar
-                            </button>
-                        </div>
-
-                    </div>
-                </div>
-
-
-                <div class="panel-body" ng-if="!alerts">
+                <div class="tools"> </div>
+            </div>
+            <div class="portlet-body" ng-if="alertMant">
+                <table class="table table-striped table-bordered table-hover" id="sample_1">
+                    <thead>
+                        <tr>
+                            <th>Consecutivo</th>
+                            <th>Montacargas</th>
+                            <th>Horas</th>
+                            <th>Enviar a Mantenimiento</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="alertM in alertMant">
+                            <td> {{alertM.consecutivo}} </td>
+                            <td> {{alertM.montacargas}} </td>
+                            <td> {{alertM.horas}} </td>
+                            <td>
+                                <button class="btn green" ng-click="actEstado1(alertM)">Enviar</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="panel-body" ng-if="!alertMant">
                     <div class="center" >
                         <h1>No hay mantenimientos por realizar</h1>
                     </div>
                 </div>
             </div>
 
-
         </div>
-
     </div>
-    <script src="assets/global/scripts/datatable.js" type="text/javascript"></script>
-    <script src="assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
-    <script src="assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
-    <script src="assets/pages/scripts/table-datatables-buttons.js" type="text/javascript"></script>
-</body>
+</div>
+<uib-alert ng-repeat="ale in aler" type="{{ale.type}}" dismiss-on-timeout="5000" close="closeAlert($index)">{{ale.msg}}</uib-alert>
