--- a/web/views/horimetro.html
+++ b/web/views/horimetro.html
@@ -48,7 +48,7 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label">Horas: </label>
                         <div class="col-md-4">
-                            <input class="bs-select form-control" type="number" name="quantity" min="{{montacargas.horimetroActual}}" max="{{montacargas.horimertroActual + 499}}" ng-model="horimetro.horas">
+                            <input class="bs-select form-control" type="number" name="quantity" ng-model="horimetro.horas">
                         </div>
 
                     </div>
