--- a/web/views/mantenimientos/realizar.html
+++ b/web/views/mantenimientos/realizar.html
@@ -25,7 +25,7 @@
                             <td> {{alertM.montacargas}} </td>
                             <td> {{alertM.horas}} </td>
                             <td>
-                                <button class="btn green" ng-click="actEstado1(alertM)">Enviar</button>
+                                <button class="btn green" ng-click="deleteAlert(alertM)">Enviar</button>
                             </td>
                         </tr>
                     </tbody>
