--- a/web/views/mantenimientos/aprobar.html
+++ b/web/views/mantenimientos/aprobar.html
@@ -9,12 +9,12 @@
                 </div>
                 <div class="tools"> </div>
             </div>
-            <div class="portlet-body" ng-if="!listaMant">
+            <div class="portlet-body" ng-if="!ban()">
                 <div class="center" >
                     <h1>No hay mantenimientos por aprobar</h1>
                 </div>
             </div>
-            <div class="portlet-body"  ng-if="listaMant">
+            <div class="portlet-body"  ng-if="ban()">
                 <table class="table table-striped table-bordered table-hover" id="sample_1">
                     <thead>
                         <tr>
@@ -34,7 +34,7 @@
                             <td> {{list.horimetro}} </td>
                             <td> {{list.man_Actual}} </td>
                             <td>
-                                <button class="btn green" ng-click="actEstado(list)">Enviar</button>
+                                <button class="btn green" ng-click="aprobar(list)">Enviar</button>
                             </td>
                         </tr>
                     </tbody>
