--- a/web/views/mantenimientos/realizar.html
+++ b/web/views/mantenimientos/realizar.html
@@ -9,11 +9,15 @@
                 </div>
                 <div class="tools"> </div>
             </div>
-            <div class="portlet-body" ng-if="alertMant">
+            <div class="portlet-body" ng-if="!ban()">
+                <div class="center" >
+                    <h1>No hay mantenimientos por realizar</h1>
+                </div>
+            </div>
+            <div class="portlet-body" ng-if="ban()">
                 <table class="table table-striped table-bordered table-hover" id="sample_1">
                     <thead>
                         <tr>
-                            <th>Consecutivo</th>
                             <th>Montacargas</th>
                             <th>Horas</th>
                             <th>Enviar a Mantenimiento</th>
@@ -21,20 +25,15 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="alertM in alertMant">
-                            <td> {{alertM.consecutivo}} </td>
                             <td> {{alertM.montacargas}} </td>
                             <td> {{alertM.horas}} </td>
                             <td>
-                                <button class="btn green" ng-click="deleteAlert(alertM)">Enviar</button>
+                                <button class="btn green" ng-click="realizar(alertM)">Enviar</button>
                             </td>
                         </tr>
                     </tbody>
                 </table>
-                <div class="panel-body" ng-if="!alertMant">
-                    <div class="center" >
-                        <h1>No hay mantenimientos por realizar</h1>
-                    </div>
-                </div>
+
             </div>
 
         </div>
