--- a/web/views/horimetro.html
+++ b/web/views/horimetro.html
@@ -44,11 +44,18 @@
                             </ui-select>
                         </div>                       
                     </div>
+                    
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Ultimo Horimetro: </label>
+                        <div class="col-md-4">
+                            <span>{{horimetro.montacargas.horimetro}}</span>
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         <label class="col-md-4 control-label">Horas: </label>
                         <div class="col-md-4">
-                            <input class="bs-select form-control" type="number" name="quantity" ng-model="horimetro.horas">
+                            <input class="bs-select form-control" type="number" name="quantity" min='{{horimetro.montacargas.horimetro}}' max='{{horimetro.montacargas.horimetro + 499}}' ng-model="horimetro.horas">
                         </div>
 
                     </div>
