--- a/web/views/montacargas/agregar.html
+++ b/web/views/montacargas/agregar.html
@@ -251,7 +251,7 @@
                 <div class="form-actions">
                     <div class="row">
                         <div class="col-md-offset-5 col-md-9">
-                            <button type="submit"  class="btn green" ng-click="agregar(montacargas)">Enviar</button>
+                            <button type="submit"  class="btn green" ng-disabled="userForm.$invalid" >Enviar</button>
                         </div>
                     </div>
                 </div>
