Cambios V6.2 (Mantenimientos Correctivos Fecha)

--- a/web/views/insumos.html
+++ b/web/views/insumos.html
@@ -160,7 +160,7 @@
                     <label class="control-label col-md-4">Fecha de mantenimiento:</label>
                     <div class="col-md-4">
                         <div class="input-group">
-                            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="mantenimientoCo.fecha" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Cerrar" current-text="Hoy" clear-text="Limpiar" alt-input-formats="altInputFormats" />
+                            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="mantenimientoCo.fecha_mantenimiento" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Cerrar" current-text="Hoy" clear-text="Limpiar" alt-input-formats="altInputFormats" />
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="fa fa-calendar"></i></button>
                             </span>
