Cambios V6.2.3 (Mantenimientos Correctivos Fecha)

--- a/web/views/insumos.html
+++ b/web/views/insumos.html
@@ -184,6 +184,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <span>{{mantenimientoCo.fecha_mantenimiento}}</span>
             </div>
             <div class="modal-footer">
                 <button class="btn green btn-primary" data-dismiss="modal" aria-hidden="true" ng-click="ok()">Crear</button>
