ARREGLO DEL HOME.DAO 2

--- a/web/views/home.html
+++ b/web/views/home.html
@@ -97,9 +97,9 @@
             <div class="display">
                 <div class="number">
                     <h3 class="font-red-haze">
-                        <span data-counter="counterup" data-value="{{datos.promedio_horas_laboradas_por_semana}}">{{datos.promedio_horas_laboradas_por_semana}}</span>
+                        <span data-counter="counterup" data-value="{{datos.montacargas_pend}}">{{datos.montacargas_pend}}</span>
                     </h3>
-                    <small>Promedio horas laboradas por semana</small>
+                    <small>Montacargas pendientes de mantenimiento</small>
                 </div>
                 <div class="icon">
                     <i class="icon-info"></i>
