--- a/web/styles/scss/layouts/layout4/custom.scss
+++ b/web/styles/scss/layouts/layout4/custom.scss
@@ -1,5 +1,5 @@
 /* here you can put your own css to customize and override the theme */
-
+@import '_variables'; // theme level variables 
 .clearfix {
     overflow: auto;
     zoom: 1;
@@ -56,6 +56,19 @@
     text-decoration: inherit;
     font-size: 18px;
     color: lawngreen;
+}
+
+.alertaI {
+    position: relative;
+}
+.alertaI:before {
+    content: "\f05a";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    font-size: 18px;
+    color: #5b9bd1;
 }
 
 a{
