--- a/web/views/usuarios.html
+++ b/web/views/usuarios.html
@@ -119,7 +119,7 @@
                                     <td> {{usuario.nombre}}</td>
                                     <td class="center"> {{usuario.rol}} </td>
                                     <td><a class="edit" ng-click="openEdit(usuario)"> <i class="fa fa-edit"></i> </a></td>
-                                    <td><a class="delete text-center" ng-click=""> <i class="fa fa-trash text-danger "></i></a></td>
+                                    <td><a class="delete text-center" ng-click="sendUser('delUser', usuario)"> <i class="fa fa-trash text-danger "></i></a></td>
                                 </tr>
                             </tbody>
 
