--- a/web/views/horimetro.html
+++ b/web/views/horimetro.html
@@ -75,8 +75,11 @@
                 <div class="form-actions">
                     <div class="row">
                         <div class="col-md-offset-7 col-md-9">
+                            <button class="btn btn-outline green  uppercase" data-toggle="confirmation" data-placement="top">
+                                Enviar </button>
                             <button
-                                class="btn green"
+                                data-placement="top"
+                                class="btn green uppercase"
                                 mwl-confirm
                                 title="{{confirmationSettings.title}}"
                                 message="{{ confirmationSettings.message}}"
